# Rubiks

./: CMakeLists.txt  Makefile  README.md
include/: CubeTree.h  EntropySolver.h  ForceSolver.h  OutputColor.h  OutputManager.h  cube.h  moveList.h  side.h  solver.h
src/: CubeTree.cpp  EntropySolver.cpp  ForceSolver.cpp  OutputColor.cpp  OutputManager.cpp  Solver.cpp  cube.cpp  main.cpp  side.cpp
